# hibernate-prime

./: .gitignore  README.md  hibernate.cabal
src/Database/: Hibernate.hs
src/Database/Hibernate/: Driver.hs  Meta.hs  Serialization.hs  Session.hs  Transaction.hs  Types.hs
src/Database/Hibernate/Driver/: Command.hs
src/Database/Hibernate/Session/: Class.hs
tests/: hibernate-test.hs
tests/Database/: HibernateTest.hs
tests/Database/Hibernate/: SessionTest.hs  TransactionTest.hs
