name:           hibernate
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jason

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   containers >=0.5 && <0.6
  ghc-options:     -Wall
  exposed-modules: Database.Hibernate
  other-modules:   
                   Database.Hibernate.Session,
                   Database.Hibernate.Transaction

