name:           hibernate
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         jason

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   containers >=0.5 && <0.6,
                   transformers >=0.4 && <0.5
  ghc-options:      -Wall
  exposed-modules:  Database.Hibernate
  other-modules:    
                   Database.Hibernate.Session,
                   Database.Hibernate.Transaction

test-suite hibernate-test
  type:            exitcode-stdio-1.0
  main-is:         hibernate-test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4, HTF > 0.9,
                  hibernate,
                  transformers >=0.4 && <0.5
  other-modules:   
                  Database.Hibernate.Session,
                  Database.Hibernate.SessionTest,
                  Database.HibernateTest,
                  Database.Hibernate.Transaction,
                  Database.Hibernate.TransactionTest
  hs-source-dirs:  
                  tests,
                  src

